z-index fixes for interface. wrap evt.target in $()

--- a/client/customViews/SSNotifierView/SSNotifierView.css
+++ b/client/customViews/SSNotifierView/SSNotifierView.css
@@ -6,7 +6,7 @@
   border: #dfebe1 solid;
   border-width: 3px 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background: #f8f5f2;
+  background: #f8f5f2;;
 }
 
 .SSNotifierViewFrameBody #SSNotifierControlsView.SSNotifierSubView
