--- a/client/customViews/SSNotifierView/SSNotifierViewFrame.css
+++ b/client/customViews/SSNotifierView/SSNotifierViewFrame.css
@@ -7,6 +7,7 @@
   height: 35px;
   overflow: hidden;
   width: 200px;
+  z-index: 1000001;
 }
 
 .SSNotifierOpen
